# SMR3872-Colombia

./: README.md
Day10/Kmeans-multiGPU/: Comparing_dask_code.md  Kmeans-cuml-VS-daskml.md  dask.sh  dask_Leon.sh  test-cuml-Kmeans.py  test-dask-Kmeans.py
Day2/lab/: job.sh  my_identity.c  my_pi.c  my_time.c
Day4/OpenMP_offloading_lab/: README.md  saxpy.c
Day5/Lab/: 01-Intro_to_Pytorch.ipynb  04_Optimizers.ipynb  09_XLA_Resnet18_CIFAR_training.ipynb  Links-documents.txt  bashrc_copy.txt  links-documentation.txt
Day6/Kernel_methods_for_ML/: Instruction-to-test-speedup-of-SVM-optimized.txt  Large_dataset_for_testing_parkSVC.md
Day6/Lecture-pybind11/example-binding-python-Cpp/: CMakeLists.txt  LICENSE-MIT  README.md  environment.yml  environment_new.yml  old_readme.md  setup-environment.sh  setup.py
Day6/Lecture-pybind11/example-binding-python-Cpp/arrow_pybind_example.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Day6/Lecture-pybind11/example-binding-python-Cpp/src/: example.cpp
Day6/Lecture-pybind11/example-binding-python-Cpp/src/include/: arrow_conversion.hh  caster.hh
Day6/Lecture-pybind11/example-binding-python-Cpp/test_basics/: test_basic2.py
Day6/Lecture-pybind11/example-binding-python-Cpp/tests/: test_arrow_pybind_example.py  test_vector_ops.py
Day6/projects-proposals/: Instruction_for_rbf_SVC_perf_analysis.py
Day6/singularity_tutorial/: tutorial.md
Day9/3D_ball/: benchmark_LBE3D_IO.c  compile.sh
repo-svm/: setup.py
repo-svm/PySVM/: __init__.py  conftest.py
repo-svm/Pylibsvm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+195 files in other folders)
